@@ -1270,6 +1270,25 @@ static int config__read_file_core(struct mosquitto__config *config, bool reload,
 #else
 					log__printf(NULL, MOSQ_LOG_WARNING, "Warning: Bridge and/or TLS-PSK support not available.");
 #endif
+				}else if(!strcmp(token, "bridge_receive_maximum")){
+#if defined(WITH_BRIDGE)
+					if(reload) continue; /* Bridges not valid for reloading. */
+					if(!cur_bridge){
+						log__printf(NULL, MOSQ_LOG_ERR, "Error: Invalid bridge configuration.");
+						return MOSQ_ERR_INVAL;
+					}
+					if(conf__parse_int(&token, "bridge_receive_maximum", &tmp_int, &saveptr)) return MOSQ_ERR_INVAL;
+					if(tmp_int <= 0){
+						log__printf(NULL, MOSQ_LOG_ERR, "Error: bridge_receive_maximum must be greater than 0.");
+						return MOSQ_ERR_INVAL;
+					}else if((uint64_t)tmp_int > (uint64_t)UINT16_MAX){
+						log__printf(NULL, MOSQ_LOG_ERR, "Error: bridge_receive_maximum must be lower than %u.", UINT16_MAX);
+						return MOSQ_ERR_INVAL;
+					}
+					cur_bridge->receive_maximum = (uint16_t)tmp_int;
+#else
+					log__printf(NULL, MOSQ_LOG_WARNING, "Warning: Bridge support not available.");
+#endif
 				}else if(!strcmp(token, "bridge_reload_type")){
 #ifdef WITH_BRIDGE
 					if(!cur_bridge){
